<resources>
    <string name="app_name">Scania_AKD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvTitleCad">Cadastre-se</string>
    <string name="etEmailHint">Email:</string>
    <string name="etSenhaHint">Senha:</string>
    <string name="btCadastrar">Cadastrar</string>
    <string name="tvForgetTitle">Esqueceu a sua senha?</string>
    <string name="tvSubTitleForget">Digite o seu email que enviaremos um e-mail para redefinir a sua senha.</string>
    <string name="etEmailHintForget">Email:</string>
    <string name="btEnviarForget">Enviar</string>
    <string name="tvTitleLogin">Scania APP</string>
    <string name="tvLoginLogin">Login:</string>
    <string name="etLoginHintLogin">Digite seu email</string>
    <string name="tvSenhaLogin">Senha:</string>
    <string name="etSenhaHintLogin">Digite sua senha</string>
    <string name="tvEsqueceuSenhaLogin">Esqueceu a senha?</string>
    <string name="btEntrarLogin">Entrar</string>
    <string name="btCadastrarLogin">Cadastrar-se</string>
    <string name="altLogoScaniaLogin">Logo Scania</string>
    <string name="tvTiltlePesquisa">PESQUISA 01</string>
    <string name="tvExPergunta1">Lorem ipsum dolor sit amet?</string>
    <string name="etExPergunta1">Nam laoreet mattis lacus</string>
    <string name="tvExTitlePesquisa2">Lorem Ipsum quis commodo arcu?</string>
    <string name="rb1ExPergunta2">Sed tempus urna</string>
    <string name="rb2ExPergunta2">Viverra justo nec</string>
    <string name="rb3ExPergunta2">Nunc consequat interdum</string>
    <string name="rb4ExPergunta2">Neque vitae tempus</string>
    <string name="btFinalizarPesquisa">Finalizar</string>
    <string name="tvTitlePesquisa">MINHAS PESQUISAS</string>
    <string name="tvSubTitlePesquisa">Pesquisas feitas especialmente para você!</string>
    <string name="altImg1Pesquisa">Imagem de um caminhão Scania</string>
    <string name="tvTitleCard1Pesquisa">Sed non magna</string>
    <string name="tvSubTitle1Card1Pesquisa">Nam laoreet mattis lacus</string>
    <string name="tvSubTitle2Card1Pesquisa">Cras nec nibh ut turpis feugiat aliquet</string>
    <string name="btCard01Pesquisas">Realizar Pesquisa</string>
    <string name="altImg01Card2Pesquisas">Cruzamento de diversas aveniadas com muito movimento</string>
    <string name="tvTitleCard02Pesquisas">Lorem Ipsum</string>
    <string name="tvSubTitle01Card02Pesquisas">Consectetur adipiscing elit</string>
    <string name="tvSubTitle02Card02Pesquisas">Vestibulum pellentesque ornare enim vel luctus</string>
    <string name="btRealizarPesquisas">Realizar Pesquisa</string>
    <string name="tvTitleRespostas">RESPOSTAS</string>
    <string name="tvSubTitleRespostas">Obrigado pelas respostas!</string>
    <string name="tvTitleCard01Respostas">Sobre sua pesquisa...</string>
    <string name="tvSubTitle01Card01Respostas">Ponto 01</string>
    <string name="tvSubTitle02Card01Respostas">Ponto 02</string>
    <string name="tvSubTitle03Card01Respostas">Ponto 03</string>
    <string name="btAtendimentoRespostas">Continuar Atendimento</string>
    <string name="btBonusRespostas">Resgatar bonus</string>
    <string name="altPontosRespostas">Pequeno avião de papel</string>
</resources>