<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/tvTitleLogin"
                android:textSize="50sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivImageAvatar"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_baseline_account_circle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                android:contentDescription="@string/altLogoScaniaLogin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-5dp"
                android:text="@string/tvLoginLogin"
                app:layout_constraintBottom_toTopOf="@id/etEmailLogin"
                app:layout_constraintLeft_toLeftOf="@id/etEmailLogin" />

            <EditText
                android:id="@+id/etEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/etLoginHintLogin"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivImageAvatar"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-5dp"
                android:text="@string/tvSenhaLogin"
                app:layout_constraintBottom_toTopOf="@id/etSenhaLogin"
                app:layout_constraintLeft_toLeftOf="@id/etSenhaLogin" />

            <EditText
                android:id="@+id/etSenhaLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:hint="@string/etSenhaHintLogin"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEmailLogin"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/tvEsqueceuSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/tvEsqueceuSenhaLogin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etSenhaLogin" />

            <Button
                android:id="@+id/btEntrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/btEntrarLogin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEsqueceuSenha" />

            <Button
                android:id="@+id/btCadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/btCadastrarLogin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btEntrar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>