<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PerguntasFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:letterSpacing="0.1"
                android:text="@string/tvTiltlePesquisa"
                android:textAppearance="?attr/textAppearanceHeadline1"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardPesquisa1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="20dp"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:strokeColor="@color/blue_40"
                app:strokeWidth="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvExPergunta1"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/etExPergunta1"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:lines="1"
                            android:minHeight="48dp"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorPrimary" />
                    </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardPergunta2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="20dp"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardPesquisa1"
                app:strokeColor="@color/blue_40"
                app:strokeWidth="1dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvExTitlePesquisa2"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/btRadio1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="onRadioButtonClicked"
                                android:text="@string/rb1ExPergunta2" />

                            <RadioButton
                                android:id="@+id/btRadio2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="onRadioButtonClicked"
                                android:text="@string/rb2ExPergunta2" />

                            <RadioButton
                                android:id="@+id/btRadio3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="onRadioButtonClicked"
                                android:text="@string/rb3ExPergunta2" />

                            <RadioButton
                                android:id="@+id/btRadio4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="onRadioButtonClicked"
                                android:text="@string/rb4ExPergunta2" />

                        </RadioGroup>

                    </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="80dp"
            android:layout_marginVertical="80dp"
            android:text="@string/btFinalizarPesquisa"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>