<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".EsqueceuSenhaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/tvForgetTitle"
            android:gravity="center_horizontal"
            android:textSize="25sp"
            android:layout_marginTop="40dp"

            />

        <TextView
            android:id="@+id/tvSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/tvSubTitleForget"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            app:helperText=""
            app:helperTextTextColor="@android:color/holo_red_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubTitle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailForg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1"
                android:inputType="textEmailAddress"
                android:hint="@string/etEmailHintForget"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="478dp"
            android:padding="10dp"
            android:text="@string/btEnviarForget"
            app:layout_constraintTop_toBottomOf="@id/emailContainer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>