<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CadastroFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitleCad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            android:text="@string/tvTitleCad"
            android:gravity="center_horizontal"
            android:textSize="40sp"
            android:letterSpacing="0.1"
            android:layout_marginVertical="30dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginHorizontal="20dp"
            app:helperText="Obrigatório"
            app:helperTextTextColor="@android:color/holo_red_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleCad"
            >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailCad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/etEmailHint"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/senhaContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginHorizontal="20dp"
            app:helperText="Obrigatório"
            app:helperTextTextColor="@android:color/holo_red_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSenhaCad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:maxLength="16"
            android:inputType="textPassword"
            android:hint="@string/etSenhaHint"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/senhaContainer"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="40dp"
            android:text="@string/btCadastrar"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>